<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/characterListFragment">

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.alfonsocastro.breakingfans.ui.characters.CharacterListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_character_list">
        <action
            android:id="@+id/action_characterListFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
        <action
            android:id="@+id/action_characterListFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailFragment"
        android:name="com.alfonsocastro.breakingfans.ui.characters.CharacterDetailFragment"
        android:label="@string/character_detail_title"
        tools:layout="@layout/fragment_character_detail">
        <argument
            android:name="isFavorite"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="characterId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.alfonsocastro.breakingfans.ui.favorites.FavoritesFragment"
        android:label="@string/favorites_title"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>
</navigation>